--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink: pretty
 # Setup
 title: YoungIn Kim
 tagline: 'A Jekyll theme'
-description: 'M.S. student in HCIL (KAIST, SoC) Prof. Geehyuk Lee'
+description: 'M.S. student in HCIL (KAIST, SoC) Advisor - Prof. Geehyuk Lee'
 url: https://youngin3737.github.io
 baseurl: ""
 
