--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink: pretty
 
 # Setup
 title: YoungIn Kim
-tagline: 'A Jekyll theme'
+tagline: 'Homepage'
 description: 'M.S. student in HCIL (KAIST, SoC) Advisor - Prof. Geehyuk Lee'
 url: https://youngin3737.github.io
 baseurl: ""
